@@ -183,7 +183,7 @@ div#column-one,
 div#f-poweredbyico,
 div#f-copyrightico,
 ul#f-list,
-div#xhtml-validator,
+div#html-validator,
 li#pt-logout,
 li#pt-login,
 div#p-logo,
