@@ -1,14 +1,14 @@
 <?php global $RUNTIMER; ?>
 <table class="fullwidth">
 <tr><td>
-<div id="xhtml-validator"><a href="http://validator.w3.org/check/referer"><img
+<div id="html-validator"><a href="http://validator.w3.org/check/referer"><img
         id="xhtml"
-        src="<?php echo $WikiTheme->_findData('buttons/valid-xhtml10.png')?>"
-        alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+        src="<?php echo $WikiTheme->_findData('buttons/valid-html5.png')?>"
+        alt="Valid HTML 5!" /></a>
 <a href="http://jigsaw.w3.org/css-validator/check/referer"><img
         id="css"
-        src="<?php echo $WikiTheme->_findData('buttons/vcss.png')?>"
-        alt="Valid CSS!" height="31" width="88" /></a>
+        src="<?php echo $WikiTheme->_findData('buttons/valid-css3.png')?>"
+        alt="Valid CSS 3!" /></a>
 </div>
 </td><td>
 <span class="debug"><?php echo fmt("Page Execution took %s seconds", $RUNTIMER->getStats())?>
