@@ -1,4 +1,4 @@
 <?php global $RUNTIMER; ?>
-<p class="align-center" id="xhtml-validator"><a href="http://validator.w3.org/check/referer">Valid XHTML 1.0</a>  <a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS!</a>
+<p class="align-center" id="html-validator"><a href="http://validator.w3.org/check/referer">Valid HTML 5!</a>  <a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS 3!</a>
 <span class="debug"><?php echo fmt("Page Execution took %s seconds", $RUNTIMER->getStats())?></span>
 </p>
